--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.beretta.owoxgallary">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:name=".OWOXGalleryApplication"
@@ -15,14 +16,20 @@
         <activity
             android:name=".ui.list.ImageListActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:launchMode="singleInstance">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
-
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.details.DetailsActivity"
+            android:label="@string/title_activity_details"
+            android:launchMode="singleTask"
+            android:parentActivityName=".ui.list.ImageListActivity"
+            android:theme="@style/AppTheme" />
+
+        <service android:name=".network.service.DownloadService" />
     </application>
 
 </manifest>
